grammar.txt
script = statements EOF .

statements = statement statements .

statement = move | turn | pick | drop .

move = ( 'move' | 'mover' ) INTEGER .
turn = ( 'turn' | 'girar' ) ( 'left' | 'right' | 'esquerda' | 'direita' ) .
pick = ( 'pick' | 'pegar' ) .
drop = ( 'drop' | 'soltar' ) .

INTEGER = [0..9]+ .
